# nndl-custom

./: .gitignore  LICENSE  README.md  environment.yaml  explicit.txt  pyproject.toml
notebooks/: network.ipynb
src/: main.py  mnist_loader.py  network.py  network2.py  network3.py
